# raycast-linux

./: .gitignore  .prettierignore  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
sidecar/: .gitignore  package.json  plugin-host.ts  pnpm-lock.yaml
sidecar/src/: config.ts  global.d.ts  hostConfig.ts  index.ts  io.ts  plugin.ts  preferences.ts  reconciler.ts  state.ts  types.ts  utils.ts
sidecar/src/api/: ai.ts  browserExtension.ts  cache.ts  clipboard.ts  colors.ts  environment.ts  hud.ts  icon.ts  index.ts  navigation.ts  oauth.ts  rpc.ts  toast.ts  types.ts  utils.ts
src/: app.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
src-tauri/SoulverWrapper/: Package.swift
src-tauri/SoulverWrapper/Sources/SoulverWrapper/: RaycastCurrencyProvider.swift  SoulverWrapper.swift
src-tauri/capabilities/: default.json  desktop.json  hud.json
src-tauri/src/: ai.rs  app.rs  browser_extension.rs  cache.rs  clipboard.rs  clipboard_history.rs  desktop.rs  error.rs  extensions.rs  filesystem.rs  frecency.rs  lib.rs  main.rs  oauth.rs  quicklinks.rs  soulver.rs  system.rs
src-tauri/src/clipboard_history/: encryption.rs  manager.rs  mod.rs  monitor.rs  types.rs
src-tauri/src/file_search/: indexer.rs  manager.rs  mod.rs  types.rs  watcher.rs
src-tauri/src/snippets/: engine.rs  input_manager.rs  manager.rs  mod.rs  types.rs
src/lib/: actions.svelte.ts  api.ts  apps.svelte.ts  assets.ts  command-palette.svelte.ts  frecency.svelte.ts  index.ts  node.svelte.ts  nodes.ts  plugin.js  props.ts  quicklinks.svelte.ts  renderKey.ts  results.svelte.ts  sidecar.svelte.ts  store.ts  types.ts  ui.svelte.ts  viewManager.svelte.ts
src/lib/api/: index.ts  toast.ts
src/lib/components/: AiSettingsView.svelte  AppList.svelte  Icon.svelte  (+22 more)
src/routes/: +page.svelte
(+82 files in other folders)
