[package]
name = "raycast-linux"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "raycast_linux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
freedesktop-file-parser = "0.2.0"
bincode = { version = "2.0.1", features = ["serde"] }
rayon = "1.10.0"
selection = "1.2.0"
url = "2.5.4"
arboard = "3.5.0"
zbus = "5.7.1"
reqwest = "0.12.20"
zip = "4.1.0"
bytes = "1.10.1"
tokio-tungstenite = "^0.27"
futures-util = "^0.3.31"
tokio = { version = "^1.45.1", features = ["full"] }
uuid = { version = "^1.17.0", features = ["v4", "serde"] }
enigo = "0.5.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
keyring = { version = "3.6.2", features = ["apple-native", "linux-native", "windows-native"] }
aes-gcm = "0.10.3"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = { version = "0.4.41", features = ["serde"] }
once_cell = "1.21.3"
image = "0.25.6"
regex = "1.11.1"
rand = "0.9.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
